new proj/src/objects/GE_Region_User__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Opportunity Region to User Mapping</description>
    <fields>
        <fullName>GE_OG_RecordType__c</fullName>
        <label>Record Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_SSO__c</fullName>
        <label>SSO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_User_Name__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>GE Region User</label>
</CustomObject>